syntax = "proto3";
package veracity.queue;

import "google/protobuf/any.proto";
import "github.com/dogmatiq/interopspec/envelopespec/envelope.proto";

option go_package = "github.com/dogmatiq/veracity/internal/queue";

message JournalRecord {
  oneof OneOf {
    EnqueueRecord enqueue = 1;
    AcquireRecord acquire = 2;
    AckRecord ack = 3;
    RejectRecord reject = 4;
  }
}

message JournalMessage {
  dogma.interop.v1.envelope.Envelope envelope = 1;
  string key = 2;
  int64 priority = 3;
  google.protobuf.Any meta_data = 4;
}

message EnqueueRecord { repeated JournalMessage messages = 1; }
message AcquireRecord { string key = 1; }
message AckRecord { string key = 1; }
message RejectRecord { string key = 1; }
